--- a/index.html
+++ b/index.html
@@ -1,48 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>LPリダイレクト</title>
-    <script>
-        const redirectUrl = "https://kyasha-bodymake.my.canva.site/close-seminar";
-        const cookieName = "lpVisited";
-        const daysToRedirect = 3;
+  <meta charset="UTF-8">
+  <title>Canva LP リダイレクト</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #ffffff;
+    }
+    iframe {
+      display: block;
+      width: 100%;
+      height: 100vh;
+      border: none;
+    }
+  </style>
+  <script>
+    // Cookieで3日後にリダイレクト
+    const redirectURL = "https://kyasha-bodymake.my.canva.site/close-seminar";
+    const visitedKey = "lpVisitedAt";
+    const now = Date.now();
+    const visitedAt = localStorage.getItem(visitedKey);
 
-        function setCookie(name, value, days) {
-            const date = new Date();
-            date.setDate(date.getDate() + days);
-            document.cookie = `${name}=${value}; expires=${date.toUTCString()}; path=/`;
-        }
-
-        function getCookie(name) {
-            const value = `; ${document.cookie}`;
-            const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return parts.pop().split(';').shift();
-        }
-
-        window.onload = function () {
-            const visitedDate = getCookie(cookieName);
-            const now = new Date();
-
-            if (visitedDate) {
-                const visitTime = new Date(visitedDate);
-                const diffDays = (now - visitTime) / (1000 * 60 * 60 * 24);
-
-                if (diffDays >= daysToRedirect) {
-                    window.location.href = redirectUrl;
-                    return;
-                }
-            } else {
-                setCookie(cookieName, now.toUTCString(), daysToRedirect);
-            }
-        }
-    </script>
+    if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
+      window.location.href = redirectURL;
+    } else if (!visitedAt) {
+      localStorage.setItem(visitedKey, now);
+    }
+  </script>
 </head>
-<body style="margin:0; padding:0; background:#fff;">
-    <p>ページを読み込み中...</p>
-    <iframe 
-        src="https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed"
-        style="width:100%; height:100vh; border:none;">
-    </iframe>
+<body>
+  <iframe src="https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed" allowfullscreen></iframe>
 </body>
 </html>
