--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>Canva LP リダイレクト</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #ffffff;
-    }
-    iframe {
-      display: block;
-      width: 100%;
-      height: 100vh;
-      border: none;
-    }
-  </style>
-  <script>
-    // Cookieで3日後にリダイレクト
-    const redirectURL = "https://kyasha-bodymake.my.canva.site/close-seminar";
-    const visitedKey = "lpVisitedAt";
-    const now = Date.now();
-    const visitedAt = localStorage.getItem(visitedKey);
+    <meta charset="UTF-8">
+    <title>LP 3日後リダイレクト</title>
+    <script>
+        // Cookieで3日後リダイレクト
+        const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
+        const COOKIE_NAME = "visitedAt";
 
-    if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
-      window.location.href = redirectURL;
-    } else if (!visitedAt) {
-      localStorage.setItem(visitedKey, now);
-    }
-  </script>
+        window.onload = function () {
+            const visitedAt = localStorage.getItem(COOKIE_NAME);
+            const now = Date.now();
+
+            if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
+                window.location.href = REDIRECT_URL;
+            } else if (!visitedAt) {
+                localStorage.setItem(COOKIE_NAME, now.toString());
+            }
+        };
+    </script>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-color: #fff; /* 黒背景防止 */
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <iframe src="https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed" allowfullscreen></iframe>
+    <iframe 
+        src="https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed" 
+        allowfullscreen="allowfullscreen">
+    </iframe>
 </body>
 </html>
