--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
             padding: 0;
             height: 100%;
             width: 100%;
-            background: #ffffff; /* 黒背景防止 */
+            background: #ffffff; /* 背景を白固定 */
+            display: flex;
+            justify-content: center;
         }
-        #canva-frame {
-            position: absolute;
-            top: 0;
-            left: 0;
+        iframe {
             width: 100%;
-            height: 100%;
+            max-width: 600px; /* モバイルで黒帯防止 */
             border: none;
-            display: none; /* 初期は非表示 */
+            min-height: 100vh;
         }
     </style>
     <script>
@@ -36,16 +35,12 @@
                 if (!visitedAt) {
                     localStorage.setItem(COOKIE_NAME, now.toString());
                 }
-                const iframe = document.getElementById("canva-frame");
-                iframe.src = CANVA_URL;
-                iframe.style.display = "block";
-                document.getElementById("loading").style.display = "none";
+                document.body.innerHTML = `<iframe src="${CANVA_URL}" allowfullscreen></iframe>`;
             }
         };
     </script>
 </head>
 <body>
-    <p id="loading">ページを読み込み中...</p>
-    <iframe id="canva-frame" allowfullscreen></iframe>
+    <p>ページを読み込み中...</p>
 </body>
 </html>
