--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
             padding: 0;
             height: 100%;
             width: 100%;
-            background: #ffffff; /* 背景を白固定 */
-            display: flex;
-            justify-content: center;
+            background: #ffffff;
+            overflow: hidden;
+        }
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            height: 100vh;
         }
         iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            max-width: 600px; /* モバイルで黒帯防止 */
+            height: 100%;
             border: none;
-            min-height: 100vh;
+            transform: scale(1.2); /* 120%拡大で黒帯を隠す */
+            transform-origin: top center;
         }
     </style>
     <script>
@@ -35,7 +43,7 @@
                 if (!visitedAt) {
                     localStorage.setItem(COOKIE_NAME, now.toString());
                 }
-                document.body.innerHTML = `<iframe src="${CANVA_URL}" allowfullscreen></iframe>`;
+                document.body.innerHTML = `<div class="iframe-container"><iframe src="${CANVA_URL}" allowfullscreen></iframe></div>`;
             }
         };
     </script>
