--- a/index.html
+++ b/index.html
@@ -3,34 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>LP 3日後リダイレクト</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            background: #ffffff;
-            overflow: hidden;
-        }
-        .iframe-container {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-            transform: scale(1.2); /* 120%拡大で黒帯を隠す */
-            transform-origin: top center;
-        }
-    </style>
     <script>
         const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
-        const CANVA_URL = "https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed";
+        const CANVA_URL = "https://kyasha-bodymake.my.canva.site/promotion";
         const COOKIE_NAME = "visitedAt";
 
         window.onload = function () {
@@ -43,7 +18,7 @@
                 if (!visitedAt) {
                     localStorage.setItem(COOKIE_NAME, now.toString());
                 }
-                document.body.innerHTML = `<div class="iframe-container"><iframe src="${CANVA_URL}" allowfullscreen></iframe></div>`;
+                window.location.href = CANVA_URL;
             }
         };
     </script>
