--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>LP 3日後リダイレクト</title>
-    <script>
-        const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
-        const CANVA_URL = "https://kyasha-bodymake.my.canva.site/promotion";
-        const COOKIE_NAME = "visitedAt";
+  <meta charset="UTF-8">
+  <title>LP 3日後リダイレクト</title>
+  <script>
+    const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
+    const CANVA_URL = "https://kyasha-bodymake.my.canva.site/promotion";
+    const COOKIE_NAME = "visitedAt";
 
-        window.onload = function () {
-            const visitedAt = localStorage.getItem(COOKIE_NAME);
-            const now = Date.now();
+    window.onload = function() {
+      const visitedAt = localStorage.getItem(COOKIE_NAME);
+      const now = Date.now();
 
-            if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
-                window.location.href = REDIRECT_URL;
-            } else {
-                if (!visitedAt) {
-                    localStorage.setItem(COOKIE_NAME, now.toString());
-                }
-                window.location.href = CANVA_URL;
-            }
-        };
-    </script>
+      if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
+        window.location.href = REDIRECT_URL;
+      } else {
+        if (!visitedAt) localStorage.setItem(COOKIE_NAME, now.toString());
+        window.location.href = CANVA_URL; // iframeではなく直接遷移
+      }
+    };
+  </script>
 </head>
 <body>
-    <p>ページを読み込み中...</p>
+  <p>ページを読み込み中...</p>
 </body>
 </html>
