--- a/index.html
+++ b/index.html
@@ -2,25 +2,41 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>LP 3日後リダイレクト</title>
+    <title>LP 1分リダイレクトテスト</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            background: #ffffff;
+        }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
     <script>
         const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
-        const CANVA_URL = "https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?utm_content=DAGKRwgiu1Y&utm_campaign=designshare&utm_medium=embeds&utm_source=link";
+        const CANVA_URL = "https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed";
         const COOKIE_NAME = "visitedAt";
 
         window.onload = function () {
             const visitedAt = localStorage.getItem(COOKIE_NAME);
             const now = Date.now();
 
-            if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
-                // 3日経過 → リダイレクト
+            // ★1分でリダイレクト
+            if (visitedAt && now - parseInt(visitedAt, 10) > 1 * 60 * 1000) {
                 window.location.href = REDIRECT_URL;
             } else {
                 if (!visitedAt) {
                     localStorage.setItem(COOKIE_NAME, now.toString());
                 }
-                // Canvaページへ即遷移
-                window.location.href = CANVA_URL;
+                document.body.innerHTML = `<iframe src="${CANVA_URL}" allowfullscreen></iframe>`;
             }
         };
     </script>
