--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
             padding: 0;
             height: 100%;
             width: 100%;
-            background: #ffffff; /* 黒背景防止 */
+            background-color: #ffffff !important; /* 常に白背景 */
+            overflow: hidden;
         }
         iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            display: block;
+            width: 100vw;
+            height: 100vh;
             border: none;
+            background-color: #ffffff; /* iframe内も白 */
         }
     </style>
     <script>
-        const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar"; 
+        const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
         const CANVA_URL = "https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed";
         const COOKIE_NAME = "visitedAt";
 
@@ -29,7 +29,6 @@
             const visitedAt = localStorage.getItem(COOKIE_NAME);
             const now = Date.now();
 
-            // 3日後にリダイレクト
             if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
                 window.location.href = REDIRECT_URL;
             } else {
