--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             padding: 0;
             height: 100%;
             width: 100%;
-            background-color: #ffffff !important; /* 常に白背景 */
-            overflow: hidden;
+            background: #ffffff; /* 黒背景防止 */
         }
         iframe {
-            display: block;
-            width: 100vw;
-            height: 100vh;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             border: none;
-            background-color: #ffffff; /* iframe内も白 */
         }
     </style>
     <script>
