--- a/index.html
+++ b/index.html
@@ -11,25 +11,36 @@
             width: 100%;
             background: #ffffff;
         }
-        #container {
+        #wrapper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            background: #ffffff; /* 白背景固定 */
+        }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+            background: #ffffff; /* iframe自体に白背景を強制 */
+            display: none;
+        }
+        #loading {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100%;
-            width: 100%;
+            color: #333;
+            font-size: 16px;
             background: #ffffff;
-        }
-        iframe {
-            display: none;
-            width: 100%;
-            height: 100%;
-            border: none;
         }
     </style>
 </head>
 <body>
-    <div id="container">
-        <p>ページを読み込み中...</p>
+    <div id="wrapper">
+        <div id="loading">ページを読み込み中...</div>
     </div>
 
     <script>
@@ -47,10 +58,12 @@
                 if (!visitedAt) {
                     localStorage.setItem(COOKIE_NAME, now.toString());
                 }
-                const container = document.getElementById("container");
-                container.innerHTML = `<iframe id="canvaFrame" src="${CANVA_URL}" allowfullscreen></iframe>`;
+                const wrapper = document.getElementById("wrapper");
+                wrapper.innerHTML = `<iframe id="canvaFrame" src="${CANVA_URL}" allowfullscreen></iframe>`;
                 const iframe = document.getElementById("canvaFrame");
-                iframe.style.display = "block";
+                iframe.onload = () => {
+                    iframe.style.display = "block"; // 読み込み後に表示
+                };
             }
         };
     </script>
