--- a/index.html
+++ b/index.html
@@ -9,40 +9,30 @@
             padding: 0;
             height: 100%;
             width: 100%;
-            background: #ffffff;
+            background: #ffffff; /* 常に白背景 */
         }
-        #wrapper {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            background: #ffffff; /* 白背景固定 */
-        }
-        iframe {
-            position: absolute;
+        #container {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            border: none;
-            background: #ffffff; /* iframe自体に白背景を強制 */
-            display: none;
-        }
-        #loading {
             display: flex;
-            justify-content: center;
             align-items: center;
-            height: 100%;
-            color: #333;
-            font-size: 16px;
+            justify-content: center;
             background: #ffffff;
         }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            display: none; /* ロード完了までは非表示 */
+        }
+        #loading {
+            font-size: 18px;
+            color: #555;
+        }
     </style>
-</head>
-<body>
-    <div id="wrapper">
-        <div id="loading">ページを読み込み中...</div>
-    </div>
-
     <script>
         const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
         const CANVA_URL = "https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed";
@@ -58,14 +48,22 @@
                 if (!visitedAt) {
                     localStorage.setItem(COOKIE_NAME, now.toString());
                 }
-                const wrapper = document.getElementById("wrapper");
-                wrapper.innerHTML = `<iframe id="canvaFrame" src="${CANVA_URL}" allowfullscreen></iframe>`;
-                const iframe = document.getElementById("canvaFrame");
-                iframe.onload = () => {
-                    iframe.style.display = "block"; // 読み込み後に表示
+
+                const iframe = document.createElement("iframe");
+                iframe.src = CANVA_URL;
+                iframe.onload = function () {
+                    document.getElementById("loading").style.display = "none";
+                    iframe.style.display = "block";
                 };
+
+                document.getElementById("container").appendChild(iframe);
             }
         };
     </script>
+</head>
+<body>
+    <div id="container">
+        <p id="loading">ページを読み込み中...</p>
+    </div>
 </body>
 </html>
