--- a/index.html
+++ b/index.html
@@ -1,69 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>LP 3日後リダイレクト</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            background: #ffffff; /* 常に白背景 */
-        }
-        #container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: #ffffff;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            display: none; /* ロード完了までは非表示 */
-        }
-        #loading {
-            font-size: 18px;
-            color: #555;
-        }
-    </style>
-    <script>
-        const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
-        const CANVA_URL = "https://www.canva.com/design/DAGKRwgiu1Y/PNiYfK6FZyCj2PgOnPCSEg/view?embed";
-        const COOKIE_NAME = "visitedAt";
+  <meta charset="UTF-8">
+  <title>LP 3日後リダイレクト</title>
+  <script>
+    const REDIRECT_URL = "https://kyasha-bodymake.my.canva.site/close-seminar";
+    const CANVA_URL = "https://kyasha-bodymake.my.canva.site/promotion";
+    const COOKIE_NAME = "visitedAt";
 
-        window.onload = function () {
-            const visitedAt = localStorage.getItem(COOKIE_NAME);
-            const now = Date.now();
+    window.onload = function() {
+      const visitedAt = localStorage.getItem(COOKIE_NAME);
+      const now = Date.now();
 
-            if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
-                window.location.href = REDIRECT_URL;
-            } else {
-                if (!visitedAt) {
-                    localStorage.setItem(COOKIE_NAME, now.toString());
-                }
-
-                const iframe = document.createElement("iframe");
-                iframe.src = CANVA_URL;
-                iframe.onload = function () {
-                    document.getElementById("loading").style.display = "none";
-                    iframe.style.display = "block";
-                };
-
-                document.getElementById("container").appendChild(iframe);
-            }
-        };
-    </script>
+      if (visitedAt && now - parseInt(visitedAt, 10) > 3 * 24 * 60 * 60 * 1000) {
+        window.location.href = REDIRECT_URL;
+      } else {
+        if (!visitedAt) localStorage.setItem(COOKIE_NAME, now.toString());
+        window.location.href = CANVA_URL; // iframeではなく直接遷移
+      }
+    };
+  </script>
 </head>
 <body>
-    <div id="container">
-        <p id="loading">ページを読み込み中...</p>
-    </div>
+  <p>ページを読み込み中...</p>
 </body>
 </html>
